--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,9 @@
 				<div id="circle-counter">0</div>
 				<div id="bag-popup" class="hidden">
 					<div class="top-arrow"></div>
-					<div id="bag-total-text">Total: </div>
-					<div id="total-price">0 Lei</div>
+					<div id="bag-total-text" class="inline-block">Total: </div>
+					<div id="currency" class="inline-block">Lei</div>
+					<div id="total-price" class="inline-block">0</div>
 				</div>
 			</div>				
 		</div>
@@ -92,6 +93,7 @@
 			<p>©2017 ShopOnline. Toate drepturile sunt rezervate.  | Incarcat de Ionut</p>
 		</div>
 	</footer>
+	<script src="../js/common.js" type="text/javascript"></script>
 	<script src="../js/products.js" type="text/javascript"></script>
 	<script src="../js/renderProduct.js" type="text/javascript"></script>
 	<script src="../js/bag.js" type="text/javascript"></script>
