--- a/html/index.html
+++ b/html/index.html
@@ -34,11 +34,16 @@
 		</aside>
 		<div class="main-content">
 			<div id="slider-container">
-				<div id="slider">
+				<div id="slider" class="slide-transition-0">
 					<div class="slide red"></div>
-					<div class="slide yellow"></div>
 					<div class="slide blue"></div>
+					<div class="slide yellow"></div>
 				</div>	
+				<div id="slider-dots">
+					<a class="slider-dot active-slide-dot" data-slide-id="0"></a>
+					<a class="slider-dot" data-slide-id="1"></a>
+					<a class="slider-dot" data-slide-id="2"></a>
+				</div>
 			</div>
 			<section id="section-top-products"></section>
 			<div id="compare-container" class="hidden"></div>
@@ -97,6 +102,7 @@
 	<script src="../js/products.js" type="text/javascript"></script>
 	<script src="../js/renderProduct.js" type="text/javascript"></script>
 	<script src="../js/bag.js" type="text/javascript"></script>
+	<script src="../js/slider.js" type="text/javascript"></script>
 	<script src="../js/script.js" type="text/javascript"></script>
 </body>
 </html>
