--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,9 @@
 					<a class="slider-dot" data-slide-id="2"></a>
 				</div>
 			</div>
-			<section id="section-top-products"></section>
+			<section id="section-top-products">
+				<img src="../images/spinner.gif">
+			</section>
 			<div id="compare-container" class="hidden"></div>
 		</div>
 	</main>
