--- a/html/productsPage.html
+++ b/html/productsPage.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Shop Online</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
 	<header>
 		<div class="header-content">
-			<a href="./index.html" class="shopping-logo">
+			<a href="/" class="shopping-logo">
 				<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"><path d="M34.42 18L25.66 4.89c-.38-.58-1.02-.85-1.66-.85-.64 0-1.28.28-1.66.85L13.58 18H4c-1.1 0-2 .9-2 2 0 .19.03.37.07.54l5.07 18.54C7.61 40.76 9.16 42 11 42h26c1.84 0 3.39-1.24 3.85-2.93l5.07-18.54c.05-.16.08-.34.08-.53 0-1.1-.9-2-2-2h-9.58zM18 18l6-8.8 6 8.8H18zm6 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z"/></svg>
 			</a>
 			<div id="bag-icon-container" class="cart-logo">
@@ -90,7 +91,7 @@
 			<p>©2017 ShopOnline. Toate drepturile sunt rezervate.  | Incarcat de Ionut</p>
 		</div>
 	</footer>
-	<script src="../js/products.js" type="text/javascript"></script>
+	<!-- <script src="../js/products.js" type="text/javascript"></script> -->
 	<script src="../js/renderProduct.js" type="text/javascript"></script>
 	<script src="../js/bag.js" type="text/javascript"></script>
 	<script src="../js/common.js" type="text/javascript"></script>
