--- a/html/bag.html
+++ b/html/bag.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Shop Online</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -11,7 +12,7 @@
 			<a href="/" class="shopping-logo">
 				<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"><path d="M34.42 18L25.66 4.89c-.38-.58-1.02-.85-1.66-.85-.64 0-1.28.28-1.66.85L13.58 18H4c-1.1 0-2 .9-2 2 0 .19.03.37.07.54l5.07 18.54C7.61 40.76 9.16 42 11 42h26c1.84 0 3.39-1.24 3.85-2.93l5.07-18.54c.05-.16.08-.34.08-.53 0-1.1-.9-2-2-2h-9.58zM18 18l6-8.8 6 8.8H18zm6 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z"/></svg>
 			</a>
-			<div id="bag-icon-container" class="cart-logo">
+			<!-- <div id="bag-icon-container" class="cart-logo">
 				<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg id="svg-cart" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path id="svg-path" d="M17,18A2,2 0 0,1 19,20A2,2 0 0,1 17,22C15.89,22 15,21.1 15,20C15,18.89 15.89,18 17,18M1,2H4.27L5.21,4H20A1,1 0 0,1 21,5C21,5.17 20.95,5.34 20.88,5.5L17.3,11.97C16.96,12.58 16.3,13 15.55,13H8.1L7.2,14.63L7.17,14.75A0.25,0.25 0 0,0 7.42,15H19V17H7C5.89,17 5,16.1 5,15C5,14.65 5.09,14.32 5.24,14.04L6.6,11.59L3,4H1V2M7,18A2,2 0 0,1 9,20A2,2 0 0,1 7,22C5.89,22 5,21.1 5,20C5,18.89 5.89,18 7,18M16,11L18.78,6H6.14L8.5,11H16Z" /></svg>
 				<div id="circle-counter">0</div>
 				<div id="bag-popup" class="hidden">
@@ -19,28 +20,34 @@
 					<div id="bag-total-text" class="inline-block">Total: </div>
 					<div id="currency" class="inline-block">Lei</div>
 					<div id="total-price" class="inline-block">0</div>
-					<div id="bag-detail"><a href="/bag.html">Vezi detalii cos</a></div>
+					<div id="bag-detail"><a href="">Vezi detalii cos</a></div>
 				</div>
-			</div>				
+			</div> -->				
 		</div>
 	</header>
 
 	<main>
-		<aside>
-			<nav class="product-brands">
-				<h3>BRANDURI</h3>
-				<ul id="product-brands"></ul>
-			</nav>
-		</aside>
-		<div class="main-content">
-			<div id="products-filter">
-				<div style="margin-left: 20px; font-weight: 600; margin-top: 20px;">Filtreaza dupa:</div>
-				<select>
-					<option value="alphabetical">Nume</option>
-					<option value="price">Pret</option>
-				</select>
+		<div id="main-wrapper-bag">
+			<div id="table" class="hidden">
+				<table class="table table-dark table-bordered">
+					<thead>
+						<tr>
+						    <th scope="col">#</th>
+						    <th scope="col">Nume</th>
+						    <th scope="col">Pret</th>
+					    </tr>
+					</thead>
+					<tbody id="table-body"></tbody>
+					<tfoot>
+						<tr>
+							<th></th>
+							<th>Total:</th>
+							<th id="total-products-price"></th>
+						</tr>
+					</tfoot>
+				</table>
 			</div>
-			<div id="all-products"></div>
+			<div class="no-products hidden" id="empty-bag">Cosul dumneavoastra este gol</div>
 		</div>
 	</main>
 
@@ -89,13 +96,11 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<p>©2017 ShopOnline. Toate drepturile sunt rezervate.  | Incarcat de Ionut</p>
+			<p>©2018 ShopOnline. Toate drepturile sunt rezervate.  | Incarcat de Ionut</p>
 		</div>
 	</footer>
-	<!-- <script src="../js/products.js" type="text/javascript"></script> -->
-	<script src="../js/renderProduct.js" type="text/javascript"></script>
-	<script src="../js/bag.js" type="text/javascript"></script>
 	<script src="../js/common.js" type="text/javascript"></script>
-	<script src="../js/productsPage.js" type="text/javascript"></script>
+	<script src="../js/bag.js" type="text/javascript"></script>
+	<script src="../js/bagPage.js" type="text/javascript"></script>
 </body>
 </html>
